Fixed cropping when image is rotated and added help overlay

--- a/src/style/helpOverlay.css
+++ b/src/style/helpOverlay.css
@@ -25,17 +25,24 @@
 .arrow {
   font-size: 2rem;
   margin: 0;
+  height: 1.8rem;
+}
+
+.arrow-extension {
+  font-size: 2.2rem;
+  height: 1.5rem;
+  margin: 0;
 }
 
 .exit-button {
   position: absolute;
-  bottom: 1vh;
-  left: 27vw;
+  top: 1vh;
+  left: calc(100vw - 3vh);
   transform: translateX(-50%);
   border: 1px solid rgb(200, 200, 200);
-  width: 15vw;
+  width: 3vh;
   height: 3vh;
-  border-radius: 0.8vh;
+  border-radius: 1.5vh;
   z-index: 1001;
   font-size: 0.9em;
   transition: opacity 300ms linear;
@@ -44,7 +51,7 @@
 .next-button {
   position: absolute;
   bottom: 1vh;
-  left: 73vw;
+  left: 50vw;
   transform: translateX(-50%);
   border: 1px solid rgb(200, 200, 200);
   width: 15vw;
